@@ -1,6 +1,6 @@
 AUX flyspray-0.9.9.6-system-adodb.patch 1397 RMD160 70b743edbcb7080af630d94f454c48ecf14fb406 SHA1 cb2298cc67ea75f38243f4431ffced56c7cf8760 SHA256 0a4c914a6bf263a14ac11f80c93c7d43515c76cdac264e879a6c31730cbb95e5
 AUX postinstall-en.txt 317 RMD160 61fc8a45c4aaa3ddf633860e636298df5fc0fc6c SHA1 444bacb8f99062d6a21d5359dfdfefdad7ce3985 SHA256 a2bde939f95165ce41d23a524e291c3f1be3ff2e7426736e144877ea780fbaa4
 DIST flyspray-0.9.9.6.zip 1573955 RMD160 dc56992c0a85662d71245400b50553e1dfd1dfc4 SHA1 3b0e8422081197998d7d83ee5fdb1d6a0fb4d90c SHA256 c5c728bb66aca8c8ded3533387a751a129a2096b230f9dd1c16f77d1767bbe6c
-EBUILD flyspray-0.9.9.6.ebuild 1220 RMD160 c0927325e4257f7667ebac8a75f69b5772901983 SHA1 5fc79d334fcbd67ef4290a4fcac3c047615b586b SHA256 7e1a99077035bcb8d52c5812dac40a9ab64521ce73cc369ab57fe2528ec38594
-MISC ChangeLog 376 RMD160 e26b7904681f736444b41425221d3369edd1e889 SHA1 499b59931c458ba5af78aa284f7edb088dc692ed SHA256 87a5fdad283bf62ed5effff0355a2156e7d9ece0f452a712293a315bb8718a51
+EBUILD flyspray-0.9.9.6.ebuild 1222 RMD160 cda3f08c6ecc833911b311c4b482ec5e5b8cd537 SHA1 f5a5ad425c93c3f2cbcc637863057ed09b7c1799 SHA256 5bac510c183dd821a35752d0b5ffb010eddb669e1db3564d33a58783658a33bf
+MISC ChangeLog 543 RMD160 53523d0f52bf8eac70479a6815cbc60b8db74c1e SHA1 5b62d85c65ceab528259655ae0ac5c61dee29ceb SHA256 85deed402f56b6d9c80a92a79d70e4a0cbe5af068a6d0bdc2b1fb2ebfc7417fe
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
